# master-thesis

./: .gitignore  .gitmodules  README.md
code/: CMakeLists.txt  README.md  arrangement.cpp  arrangement.hpp  arrangement_io.hpp  concave_triangle.in  crown.in  crown_guards.in  draw_visibility.py  gradient.hpp  guard.hpp  main.cpp  pentagram.in  regularised_visibility_in  square.in  utils.hpp
code/hello_world/: CMakeLists.txt  arrangement  arrangement_io.cpp  convex_hull_yz.cpp  draw_polygon.cpp  draw_visibility.py  exact.cpp  joe_simpson_visibility.cpp  point_location_utils.h  simple_polygon_visibility_2.cpp  vector_convex_hull.cpp
code/inputs/: 2_guards.in  comb.in  comb10.in  comb100.in  comb15.in  comb2.in  comb20.in  comb25.in  comb3.in  comb5.in  comb50.in  comb6.in  comb7.in  comb8.in  comb9.in  comb_2.in  comb_3.in  concave_triangle.in  corridor.in  crown.in  doc_eg.in  gen_combs.py  gen_guards_pos.py  love.in  pentagram.in  random.in  randsimple-20-1.in  randsimple-20-10.in  randsimple-20-11.in  randsimple-20-2.in  randsimple-20-3.in  randsimple-20-4.in  randsimple-20-5.in  randsimple-20-6.in  randsimple-20-7.in  randsimple-20-8.in  randsimple-20-9.in  reflex_area.in
code/results/: comb.out  comb10.out  comb15.out  comb20.out  comb25.out  comb6.out  comb7.out  comb8.out  comb_2.out  comb_real_no_line.out
code/results/2022-09-15_all_heuristics/: random.out
code/results/2022-09-15_no_angle/: 2_guards.out  comb.out  comb2.out  random.out
code/results/2022-09-15_no_capping/: comb.out  (+2 more)
code/visualisations/: convert_input.py  draw_guard_path.py  draw_visibility.py  drawing.py
(+241 files in other folders)
